--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ rand = "0.8.5"
 
 #bevy_lunex = { git = "https://github.com/bytestring-net/bevy-lunex", branch = "main" }
 bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }
+
+bevy_video_playing = { git = "https://github.com/sethblocks/bevy_video", branch = "main" }
