--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ rand = "0.8.5"
 mathio = "0.2.1"
 
 bevy = { version = "0.12.0", features = ["dynamic_linking"] }
-bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }
+bevy_lunex = "0.0.7"
+#bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }
