--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ rand = "0.8.5"
 mathio = "0.2.1"
 
 bevy_lunex = "0.0.9"
-bevy = { version = "0.12.0" }
+#bevy = { version = "0.12.0" }
 
 #bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }
-#bevy = { version = "0.12.0", features = ["dynamic_linking"] }
+bevy = { version = "0.12.0", features = ["dynamic_linking"] }
