--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,6 @@ edition = "2021"
 [profile.dev]
 opt-level = 1
 
-[profile.dev.package."*"]
-opt-level = 3
-
-[profile.release]
-strip = true
-lto = "fat"
-
 
 [dependencies]
 ahash = "^0.8"
@@ -22,5 +15,7 @@ mathio = "^0.2"
 #bevy_lunex = "0.0.9"
 #bevy = { version = "0.12.0" }
 
-bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }
+#bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }
+
+bevy_lunex = { git = "https://github.com/bytestring-net/bevy-lunex" }
 bevy = { version = "0.12.1", features = ["dynamic_linking"] }
