--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "bevypunk"
-version = "0.1.0"
-edition = "2021"
-
-[profile.dev]
-opt-level = 1
-
+  name = "bevypunk"
+  authors.workspace    = true
+  version.workspace    = true
+  edition.workspace    = true
+  license.workspace    = true
+  repository.workspace = true
+  keywords.workspace   = true
+  categories.workspace = true
 
 [dependencies]
-ahash = "^0.8"
-rand = "^0.8"
-mathio = "^0.2"
-
-bevy_lunex = "0.0.11"
-#bevy = { version = "0.12.1" }
-#bevy_lunex = { git = "https://github.com/bytestring-net/bevy-lunex" }
-bevy = { version = "0.12.1", features = ["dynamic_linking"] }
+  bevy         = { workspace = true }
+  bevy_lunex   = { workspace = true }
+  bevy_vector_shapes = { workspace = true }
