--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,32 @@
 [package]
   name = "bevypunk"
-  authors.workspace    = true
-  version.workspace    = true
-  edition.workspace    = true
-  license.workspace    = true
-  repository.workspace = true
-  keywords.workspace   = true
-  categories.workspace = true
+  authors     = ["Dominik Kaspar"]
+  version     = "0.0.1"
+  edition     = "2021"
+  license     = "MIT OR Apache-2.0"
+  repository  = "https://github.com/idedary/bevypunk"
+
+[profile.dev]
+  opt-level = 1
 
 [dependencies]
-  bevy         = { workspace = true }
-  bevy_lunex   = { workspace = true }
-  bevy_vector_shapes = { workspace = true }
+  #bevy = { version = "0.12.1", default_features = false, features = [
+  bevy = { git = "https://github.com/bevyengine/bevy", default_features = false, features = [
+    "bevy_asset",
+    #"bevy_gilrs",
+    "bevy_winit",
+    #"bevy_core_pipeline",
+    #"bevy_pbr",
+    "bevy_render",
+    #"bevy_sprite",
+    #"bevy_text",
+    "multi-threaded",
+    "png",
+    "hdr",
+    "x11",
+    #"default_font",
+    "tonemapping_luts",
+    "dynamic_linking"
+  ] }
+  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev" }
+  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex" }
