--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@
     #"bevy_pbr",
     "bevy_render",
     #"bevy_sprite",
-    #"bevy_text",
+    "bevy_text",
     "multi-threaded",
     "png",
     "hdr",
