cleanup and polish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,15 @@
   opt-level = 3
 
 [dependencies]
+
+  # Required for VFX
+  rand = "0.8.5"
+
+  # UI framework
+  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev" }
+  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex" }
+
+  # Game engine
   bevy = { version = "0.13.2", default_features = false, features = [
     "bevy_asset",
     "bevy_audio",
@@ -25,11 +34,16 @@
     "hdr",
     "vorbis",
     "x11",
-    #"default_font",
     "tonemapping_luts",
     "dynamic_linking"
   ] }
-  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev" }
-  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex" }
-  bevy_mod_picking = { version = "0.18.2", default_features = false, features = ["backend_raycast","backend_sprite","debug","selection","highlight",] }
-  rand = "0.8.5"
+
+  # Will be upstreamed into Bevy in the future
+  bevy_eventlistener = { version = "0.7.0" }
+  bevy_mod_picking = { version = "0.18.2", default_features = false, features = [
+    "backend_raycast",
+    "backend_sprite",
+    "debug",
+    "selection",
+    "highlight",
+  ] }
