--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,11 @@
   # Required for VFX
   rand = "0.8.5"
 
+  # Required for animations
+  bevy_aseprite = { git="https://github.com/ryo33/bevy_aseprite", branch="bevy-0.13"}
+
   # UI framework
-  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev" }
+  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=["picking"] }
   bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=["picking"] }
 
   # Game engine
