--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@
   # Required for animations
   #bevy_aseprite = { git="https://github.com/ryo33/bevy_aseprite", branch="bevy-0.13"}
   bevy_webp_anim = "0.3.1"
-  #vleue_kinetoscope = { git = "https://github.com/vleue/vleue_kinetoscope" }
+  vleue_kinetoscope = { git = "https://github.com/vleue/vleue_kinetoscope" }
 
   # UI framework
   #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=["picking"] }
