--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@
 
   # Required for animations
   #bevy_aseprite = { git="https://github.com/ryo33/bevy_aseprite", branch="bevy-0.13"}
-  bevy_webp_anim = "0.3.1"
+  #bevy_webp_anim = "0.3.1"
   vleue_kinetoscope = { git = "https://github.com/vleue/vleue_kinetoscope" }
 
   # UI framework
