--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ opt-level = 3
   #vleue_kinetoscope = "0.1.1"
 
   # UI framework
-  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=["picking"] }
-  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=["picking"] }
+  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
+  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
 
   # Game engine
   bevy = { version = "0.13.2", default_features = false, features = [
