--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ opt-level = 3
   #vleue_kinetoscope = "0.1.1"
 
   # UI framework
-  bevy_lunex = "0.1.0"
+  #bevy_lunex = "0.1.0"
   #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
-  #bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
+  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
 
   # Game engine
   bevy = { version = "0.13.2", default-features = false, features = [
@@ -41,6 +41,7 @@ opt-level = 3
     # Core formats
     "vorbis",
     "png",
+    "wav",
 
     # VFX
     "hdr",
