--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,6 @@ opt-level = 3
   #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
   bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
 
-  bevy_embedded_assets = { version = "0.11.0-rc.2" }
-
   # Game engine
   bevy = { version = "0.14.0-rc.3", default-features = false, features = [
     # Core
@@ -56,6 +54,10 @@ opt-level = 3
     #"dynamic_linking",
   ] }
 
-  # Platform specific
-  [target.'cfg(unix)'.dependencies]
+# Not WASM
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+  bevy_embedded_assets = { version = "0.11.0-rc.2" }
+
+# Platform specific
+[target.'cfg(unix)'.dependencies]
   bevy = { version = "0.14.0-rc.3", default-features = false, features = ["x11"] }
