--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ opt-level = 3
 
   # UI framework
   #bevy_lunex = "0.1.0"
-  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
-  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
+  bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
+  #bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
 
   # Game engine
   bevy = { version = "0.14.0-rc.3", default-features = false, features = [
