--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ opt-level = 3
   # UI framework
   #bevy_lunex = "0.1.1"
   #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
-  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=["verbose"] }
+  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }
 
   # Physics
   bevy_rapier3d = "0.27.0-rc.1"
@@ -63,4 +63,4 @@ opt-level = 3
 
 # Platform specific
 [target.'cfg(unix)'.dependencies]
-  bevy = { version = "0.14.0-rc.3", default-features = false, features = ["x11"] }
+  bevy = { version = "0.14.0-rc.4", default-features = false, features = ["x11"] }
