--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@
   rand = "0.8.5"
 
   # UI framework
-  #bevy_lunex = "0.2.1"
+  # This project is used to dogfood the Bevy Lunex library. Please select one version that works.
+  #bevy_lunex = { version = "0.2.3", features=["kira"]}
   #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=["kira"] }
   bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=["kira"] }
 
