--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,4 +97,5 @@
   #=== RUST MISCELLANEOUS === #
 
   # OTHER
-  rand = "0.8.5"
+  rand = "^0.8.5"
+  clap = { version = "^4.5.27", features = ["derive"] }
