--- a/crates/game_preferences/Cargo.toml
+++ b/crates/game_preferences/Cargo.toml
@@ -2,7 +2,7 @@
 #=== PACKAGE INFO ===#
 
 [package]
-  name = "bevypunk"
+  name = "game_preferences"
   authors.workspace = true
   version.workspace = true
   edition.workspace = true
@@ -17,12 +17,10 @@
   # GAME CRATES
   game_loading = { workspace = true }
   game_movies = { workspace = true }
-  game_preferences = { workspace = true }
   game_vfx = { workspace = true }
 
   # GAME ENGINE
   bevy = { workspace = true }
-  log = { workspace = true }
 
   # ASSETS
   vleue_kinetoscope = { workspace = true }
@@ -36,6 +34,3 @@
 
   # PHYSICS
   avian3d = { workspace = true }
-
-  # OTHER
-  clap = { workspace = true }
