--- a/crates/game_preferences/Cargo.toml
+++ b/crates/game_preferences/Cargo.toml
@@ -15,6 +15,7 @@
 [dependencies]
 
   # GAME CRATES
+  game_cameras = { workspace = true }
   game_loading = { workspace = true }
   game_movies = { workspace = true }
   game_vfx = { workspace = true }
