--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "type": "cargo",
             "command": "run",
-            "args": ["--bin", "bevypunk", "--", "--skip-intro", "--lowram"],
+            "args": ["--bin", "bevypunk", "--", "--skip-intro", "--lowram", "--windowed"],
             "problemMatcher": [
                 "$rustc"
             ],
