--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@
     "sysinfo_plugin",
     "tonemapping_luts",
     "webgl2",
+    #"webgpu",
     "x11",
   ]}
   log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
@@ -101,5 +102,6 @@
   #=== RUST MISCELLANEOUS === #
 
   # OTHER
-  rand = "^0.9.0"
+  rand = { version = "^0.9.0" }
+  getrandom = { version = "0.3.1", features = ["wasm_js"]}
   clap = { version = "^4.5.28", features = ["derive"] }
