--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -36,7 +36,7 @@
   bevy_lunex = { workspace = true }
 
   # PHYSICS
-  avian3d = { workspace = true }
+  #avian3d = { workspace = true }
 
   # OTHER
   clap = { workspace = true }
